--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,78 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.calculator {
+  padding: 5px;
+  background: black;
+  width: 320px;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.display {
+max-width: 320px;
+height: 100px;
+color: #fff;
+padding: 30px 10px;
+font-size: 30px;
+
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.buttons {
+display: grid;
+grid-template-columns: repeat(4, 1fr);
+grid-template-rows: repeat(5, 1fr);
+grid-column-gap: 10px;
+grid-row-gap: 10px;
+}
+
+#clear { grid-area: 1 / 1 / 2 / 4; }
+#divide { grid-area: 1 / 4 / 2 / 5; }
+#multiply { grid-area: 2 / 4 / 3 / 5; }
+#subtract { grid-area: 3 / 4 / 4 / 5; }
+#add { grid-area: 4 / 4 / 5 / 5; }
+#equals { grid-area: 5 / 4 / 6 / 5; }
+#decimal { grid-area: 5 / 3 / 6 / 4; }
+#zero { grid-area: 5 / 1 / 6 / 3; }
+#one { grid-area: 4 / 1 / 5 / 2; }
+#two { grid-area: 4 / 2 / 5 / 3; }
+#three { grid-area: 4 / 3 / 5 / 4; }
+#four { grid-area: 3 / 1 / 4 / 2; }
+#five { grid-area: 3 / 2 / 4 / 3; }
+#six { grid-area: 3 / 3 / 4 / 4; }
+#seven { grid-area: 2 / 1 / 3 / 2; }
+#eight { grid-area: 2 / 2 / 3 / 3; }
+#nine { grid-area: 2 / 3 / 3 / 4; }
+
+
+.operators, #equals {
+  background-color: #ff9503; 
+  color: #fff;
+  
+  &:hover, :focus {
+      background-color: #fff;
+      color: #ff9503;
   }
-  to {
-    transform: rotate(360deg);
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  
+  #clear {
+  background-color: #a5a5a5;
+  color: #1c1c1c;
+  
+  &:hover, :focus {
+      opacity: 0.25;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+  }
+  
+  .numbers, #decimal {
+  background-color: #333;
+  color: #fff;
+  
+   &:hover, :focus {
+     background-color: #fff;
+     color: #000;
+  }
+  }
+  
+  .dev {
+  margin-top: 10px;
+  margin-left: 30px;
+  color: #fff;
+  }
